--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -6,8 +6,9 @@ HEALTHCHECK CMD curl -f http://localhost:9870/ || exit 1
 
 ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
 RUN mkdir -p /hadoop/dfs/name
+ADD hadoop-mapreduce-examples-2.7.1-sources.jar /tmp/hadoop-mapreduce-examples-2.7.1-sources.jar
+ADD Alice.txt /tmp/Alice.txt
 VOLUME /hadoop/dfs/name
-
 ADD run.sh /run.sh
 RUN chmod a+x /run.sh
 
